// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

const storageAdapter = {
  \\"module\\": \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testAdapter.js\\",
  \\"options\\": {
    \\"url\\": \\"http://test.test\\"
  }
}
const storageAdapterModule = interopRequireDefault(
  eval('require(storageAdapter.module)')
).default
const storageAdapterOptions = storageAdapter.options

export default {
  module: storageAdapterModule,
  options: storageAdapterOptions
}
"
`;

exports[`config with process.env works correctly 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

const storageAdapter = {
  \\"module\\": process.env.STORAGE_ADAPTER,
  \\"options\\": {
    \\"url\\": process.env.STORAGE_OPTIONS_URL
  }
}
const storageAdapterModule = interopRequireDefault(
  eval('require(storageAdapter.module)')
).default
const storageAdapterOptions = storageAdapter.options

export default {
  module: storageAdapterModule,
  options: storageAdapterOptions
}
"
`;
